--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,6 @@
   "start_url": "/",
   "display": "standalone",
   "orientation" : "portrait",
-  "background_color": "#FFFFFF",
-  "theme_color": "#FFFFFF"
+  "background_color": "#000000",
+  "theme_color": "#000000"
 }
