--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "gh-pages": "astro build && cp -R dist/* docs"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.3",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
-    "astro": "^4.16.18"
+    "@astrojs/mdx": "^4.3.0",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.4.0",
+    "@astrojs/vue": "^5.1.0",
+    "astro": "^5.8.0"
   }
 }
